--- a/src/scss/parts/_header.scss
+++ b/src/scss/parts/_header.scss
@@ -272,7 +272,7 @@ body.mouse .menu {
 		height: 100%;
 		min-height: 100vh;
 		background-color: var(--bg);
-		transform: translateY(-100%);
+		transform: translateX(-100%);
 		transition: transform 300ms ease;
 
 		&__body {
@@ -315,7 +315,7 @@ body.mouse .menu {
 	}
 
 	.menu.burger_open {
-		transform: translateY(0);
+		transform: translateX(0);
 	}
 
 	body.burger_open {
