--- a/src/scss/sections/_works.scss
+++ b/src/scss/sections/_works.scss
@@ -315,6 +315,28 @@
 	width: 100%;
 }
 
+.gallery:empty {
+	position: relative;
+	border-radius: 5px;
+	width: 100%;
+	height: 100px;
+	background-color: rgba(0, 0, 0, 0.05);
+
+	&::before {
+		@include adaptive("font-size", 1400, 375, 30, 18);
+
+		content: "empty";
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		font-weight: 800;
+		letter-spacing: 0.05em;
+		text-transform: uppercase;
+		color: rgba(0, 0, 0, 0.2);
+		transform: translate(-50%, -50%);
+	}
+}
+
 .card {
 	position: relative;
 	justify-self: center;
@@ -403,6 +425,7 @@ body.mouse {
 		justify-content: center;
 		margin-right: 5px;
 		border-radius: 2px;
+		width: 30px;
 		height: 30px;
 		cursor: pointer;
 
@@ -417,15 +440,15 @@ body.mouse {
 		}
 
 		// .pagination__item_current
-		&_current {
+		&._current {
 			color: var(--pagination-item-current-text);
 			background-color: var(--pagination-item-current-bg);
 			cursor: auto;
 			pointer-events: none;
-		}
 
-		&:last-child {
-			margin: 0;
+			svg path {
+				fill: var(--pagination-item-current-text);
+			}
 		}
 
 		&_number, &_current {
@@ -449,6 +472,10 @@ body.mouse {
 			background-color: var(--pagination-item-bg);
 		}
 	}
+}
+
+.numbers {
+	display: flex;
 }
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ MEDIA MAX */
